--- a/style.css
+++ b/style.css
@@ -1,5 +1,35 @@
+* {
+  box-sizing: border-box;
+  border: 1px red solid !important;
+}
 body {
   background-image: url("/images/background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#etchFrame {
+  background-image: url("/images/etch.png");
+  display: flex;
+  flex-direction: column;
+  flex: 0 1 720px;
+  min-height: 720px;
+  margin-top: 160px;
+}
+
+#etchScreen {
+  display: flex;
+  /* flex: 0 1 539px; */
+  height: 539px;
+  width: 539px;
+  margin-top: 49px;
+  margin-left: 91px;
 }
