--- a/style.css
+++ b/style.css
@@ -39,10 +39,28 @@ body {
   display: grid;
 }
 
-.square {
+.pixel {
   border: 1px lightgrey solid;
 }
 
 .fill {
   background-color: black;
+}
+
+#gridSize {
+  background-color: #4caf6b; /* Green */
+  border: none;
+  color: white;
+  margin-top: 25px;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+#controls {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
